Select 2 overflow fix

--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@
     background-color: #001489 !important;
 }
 
-.select2 .select2-container {
+.select2-container {
     max-width: 100% !important;
 }
 
